# GameEngine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CMAKE.yml  ccpp.yml
GameEngine/Color/: ge_color.cpp  ge_color.hpp
GameEngine/Renderer/: ge_renderer.hpp
GameEngine/Source/: CMakeLists.txt  Main.cpp
GameEngine/Window/: ge_window.cpp  ge_window.hpp
